# pulumi-postmark

./: .gitignore  .golangci.yml  .goreleaser.yml  .mise.toml  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yml  publish-sdks.yml  release.yml
docs/: RELEASING.md
examples/simple/: Pulumi.yaml  go.mod  main.go
provider/: client.go  config.go  go.mod  provider.go  provider_test.go  resource_domain.go  resource_domain_verification.go  resource_sender_signature.go  resource_server.go  resource_template.go
provider/cmd/pulumi-resource-postmark/: main.go  schema.json
provider/version/: version.go
sdk/: go.mod
sdk/dotnet/: Domain.cs  DomainVerification.cs  HummingbirdMe.Postmark.csproj  Provider.cs  SenderSignature.cs  Server.cs  Template.cs  Utilities.cs
sdk/dotnet/Config/: Config.cs
sdk/go/postmark/: doc.go  domain.go  domainVerification.go  init.go  provider.go  senderSignature.go  server.go  template.go
sdk/go/pulumi-postmark/: doc.go  domain.go  domainVerification.go  go.mod  go.sum  init.go  provider.go  pulumi-plugin.json  senderSignature.go  (+2 more)
sdk/java/: build.gradle  settings.gradle
sdk/nodejs/: domain.ts  domainVerification.ts  index.ts  package.json  provider.ts  senderSignature.ts  server.ts  template.ts  tsconfig.json  utilities.ts
sdk/python/: README.md  pyproject.toml
sdk/python/hummingbird_me_postmark/: README.md  __init__.py  _utilities.py  domain.py  domain_verification.py  provider.py  pulumi-plugin.json  sender_signature.py  server.py  template.py
sdk/python/hummingbird_me_postmark/config/: __init__.pyi  vars.py
(+19 files in other folders)
