[project]
  name = "hummingbird_me_postmark"
  description = "A Pulumi provider for managing Postmark email infrastructure: servers, domains, sender signatures and templates."
  dependencies = ["parver>=0.2.1", "pulumi>=3.165.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["postmark", "email", "transactional-email", "category/network"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "1.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://github.com/hummingbird-me/pulumi-postmark"
    Repository = "https://github.com/hummingbird-me/pulumi-postmark"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      hummingbird_me_postmark = ["py.typed", "pulumi-plugin.json"]
